--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,6 @@ gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==3.1.3
 MarkupSafe==2.1.3
-Werkzeug==0.15.5
+Werkzeug
 scipy>=1.11.4
 matplotlib>=3.8.2
