--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ Flask==3.0.0
 nltk==3.8.1
 scikit_learn==1.3.2
 gunicorn==19.9.0
-itsdangerous==1.1.0
+itsdangerous
 Jinja2==3.1.3
 MarkupSafe==2.1.3
 Werkzeug
