--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ gunicorn
 requests==2.31.0
 nltk==3.8.1
 scikit_learn==1.3.2
+mysql-connector-python==8.3.0
 itsdangerous
 Jinja2==3.1.3
 MarkupSafe==2.1.3
